projects/qbsf/deployment/sf-qb-integration-final/Salesforce/objects/QB_Integration_Settings.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the QuickBooks Online integration</description>
    <label>QB Integration Settings</label>
    
    <fields>
        <fullName>Middleware_Endpoint__c</fullName>
        <description>URL of the middleware service that connects Salesforce to QuickBooks</description>
        <inlineHelpText>Enter the base URL of the middleware service without trailing slash (e.g., https://qb-sf-integration.example.com)</inlineHelpText>
        <label>Middleware Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>API_Key__c</fullName>
        <description>API key for authenticating with the middleware service</description>
        <inlineHelpText>Enter the API key provided for your middleware service</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>QB_Realm_ID__c</fullName>
        <description>QuickBooks Realm ID (Company ID)</description>
        <inlineHelpText>Enter the QuickBooks Realm ID (Company ID) for your QuickBooks Online account</inlineHelpText>
        <label>QB Realm ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>